--- a/env.yml
+++ b/env.yml
@@ -3,23 +3,23 @@ channels:
   - bioconda
 dependencies:
   # Python
-  - python-levenshtein=0.26.1
-  - numpy=1.26.4
-  - pandas=2.2.3
+  - python-levenshtein>=0.26.1
+  - numpy>=1.26.4
+  - pandas>=2.2.3
   - pip
   - pyfaidx
-  - pysam=0.22.1
+  - pysam>=0.22.1
   - pytest
-  - python=3.11
-  - rich=13.7.1
-  - scikit-learn=1.2.2
-  - scipy=1.15.2
-  - typer=0.12.4
+  - python>=3.11
+  - rich>=13.7.1
+  - scikit-learn>=1.2.2
+  - scipy>=1.15.2
+  - typer>=0.12.4
   # External tools
-  - minigraph=0.21
-  - pyspoa=0.2.1
+  - minigraph>=0.21
+  - pyspoa>=0.2.1
   # R
-  - r-base=4.4.3
-  - r-kableextra=1.4.0
-  - r-knitr=1.50
-  - r-tidyverse=2.0.0
+  - r-base>=4.4.3
+  - r-kableextra>=1.4.0
+  - r-knitr>=1.50
+  - r-tidyverse>=2.0.0
